WIP: fixing off-center components

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -102,6 +102,7 @@ a {
 
 .navEntry {
   position: absolute;
+  text-align: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -220%);
@@ -109,24 +110,21 @@ a {
 }
 
 .navBtn {
-  /*border: 3px solid white;*/
   color: white;
   font-family: 'Josefin Sans';
-  font-size: 22px;
+  font-size: 28px;
   text-align: center;
-  padding: 0 -10px 0 10px;
-  margin: 0 5px 0 5px;
   width: 80px;
+  margin: 0 10px 0 10px;
 }
 
 .navActive {
   color: #3284ff;
   border-bottom: 1px solid #3284ff;
   font-family: 'Josefin Sans';
-  font-size: 22px;
+  font-size: 28px;
   text-align: center;
-  padding: 0 -10px 0 10px;
-  margin: 0 5px 0 5px;
+  margin: 0 10px 0 10px;
   width: 80px;
   animation: btnHover 0.25s;
   animation-fill-mode:both;
@@ -152,10 +150,9 @@ a {
 .sectionContainer {
   margin-top: 50px;
   left: 50%;
-  width: 55vmax;
+  width: 60vmax;
   position: absolute;
   transform: translateX(-50%);
-  padding: 0 10px 0 10px;
   text-align: left;
   color: white;
   font-size: 18px;
@@ -177,11 +174,15 @@ a {
 }
 
 .sectionContainerResume {
-  margin: 80px 25px 0 25px;
+  margin-top: 120px;
   left: 50%;
-  width: 70vmax;
+  width: 60vmax;
   position: absolute;
   transform: translateX(-50%);
+  text-align: left;
+  color: white;
+  font-size: 18px;
+  font-family: 'Ubuntu';
 }
 
 .sectionHead {
